<resources>
    <!-- String Constants. -->
    <string name="app_name">Dynamic Time Warping</string>
    <string name="mode_training">Training Mode</string>
    <string name="mode_training_desc">Hold the button to start training.</string>
    <string name="mode_recognition">Recognition Mode</string>
    <string name="mode_recognition_desc">Hold the button to recognize patterns.</string>
    <string name="raw_accelerometer">Raw Accelerometer</string>
    <string name="training">Training</string>
    <string name="recognition">Recognition</string>
    <string name="feedback">feedback</string>
    <string name="hold">Hold</string>
</resources>
