<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMature"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/lblRawAccelerometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/raw_accelerometer"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lc_acc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/horizontalSplitter"
        app:layout_constraintTop_toBottomOf="@+id/lblRawAccelerometer" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalSplitter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalSplitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTraining"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_weight="0"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/training"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/verticalSplitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalSplitter" />

    <TextView
        android:id="@+id/lblRecognition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_weight="0"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:text="@string/recognition"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalSplitter"
        app:layout_constraintTop_toTopOf="@+id/horizontalSplitter" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lc_train"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="@id/verticalSplitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTraining" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lc_recognize"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/verticalSplitter"
        app:layout_constraintTop_toBottomOf="@+id/lblRecognition" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_mode"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_mode" />

    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="1dp"
        android:text="@string/mode_training"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_mode_desc"
        app:layout_constraintEnd_toStartOf="@+id/sw_mode"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_mode_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingBottom="4dp"
        android:text="@string/mode_training_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_feedback"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:backgroundTintMode="src_over"
        android:text="@string/hold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sw_mode"
        app:layout_constraintStart_toEndOf="@id/verticalSplitter"
        app:layout_constraintTop_toTopOf="@id/tv_mode" />

    <ImageView
        android:id="@+id/iv_feedback"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/feedback"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="1dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_mode"
        app:layout_constraintEnd_toStartOf="@+id/sw_mode"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
